@@ -20,6 +20,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.Charset;
 
+import org.apache.tika.config.Field;
 import org.apache.tika.detect.EncodingDetector;
 import org.apache.tika.metadata.Metadata;
 
@@ -27,7 +28,9 @@ public class UniversalEncodingDetector implements EncodingDetector {
 
     private static final int BUFSIZE = 1024;
 
-    private static final int LOOKAHEAD = 16 * BUFSIZE;
+    private static final int DEFAULT_MARK_LIMIT = 16 * BUFSIZE;
+
+    private int markLimit = DEFAULT_MARK_LIMIT;
 
     public Charset detect(InputStream input, Metadata metadata)
             throws IOException {
@@ -35,7 +38,7 @@ public class UniversalEncodingDetector implements EncodingDetector {
             return null;
         }
 
-        input.mark(LOOKAHEAD);
+        input.mark(markLimit);
         try {
             UniversalEncodingListener listener =
                     new UniversalEncodingListener(metadata);
@@ -43,10 +46,10 @@ public class UniversalEncodingDetector implements EncodingDetector {
             byte[] b = new byte[BUFSIZE];
             int n = 0;
             int m = input.read(b);
-            while (m != -1 && n < LOOKAHEAD && !listener.isDone()) {
+            while (m != -1 && n < markLimit && !listener.isDone()) {
                 n += m;
                 listener.handleData(b, 0, m);
-                m = input.read(b, 0, Math.min(b.length, LOOKAHEAD - n));
+                m = input.read(b, 0, Math.min(b.length,markLimit - n));
             }
 
             return listener.dataEnd();
@@ -57,4 +60,18 @@ public class UniversalEncodingDetector implements EncodingDetector {
         }
     }
 
+    /**
+     * How far into the stream to read for charset detection.
+     * Default is 8192.
+     *
+     * @param markLimit
+     */
+    @Field
+    public void setMarkLimit(int markLimit) {
+        this.markLimit = markLimit;
+    }
+
+    public int getMarkLimit() {
+        return markLimit;
+    }
 }
